Fix links in list items being shifted twice

--- a/guide/src/components/HtmlContent.module.scss
+++ b/guide/src/components/HtmlContent.module.scss
@@ -130,7 +130,8 @@
   .h4,
   .h5,
   .p,
-  .li {
+  .li,
+  .link {
     // Prevent the baseline transform from being applied twice.
     position: static;
   }
